Change the nav-link background to gold and fix the contrast ratio

--- a/assets/style.css
+++ b/assets/style.css
@@ -112,8 +112,8 @@ a:hover {
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #ffffff;
-  background-color: #000;
+  color: #000;
+  background-color: #beb45a;
 }
 .nav-pills .nav-link {
   color: #000;
